refactor: delete ununsed imports and variables, fix constructor for Integer